--- a/1-screening.tex
+++ b/1-screening.tex
@@ -146,7 +146,7 @@ While mechanical properties (in the elastic regime) have been by far the most st
 
 \subsection{Transport Adsorption Properties}
 
-In the previous section, the thermodynamic properties only described the state of equilibrium of the adsorption process. But sometimes the transient state can last long before reaching the equilibrium, which makes the process more time-consuming. Thus, the transport properties complete the thermodynamic description of the adsorption process inside a nanoporous material. For example, a low diffusion rate would mean for storage applications more time and energy needed to fill-up the tanks, or for separation applications a less selective process than expected. In more extreme cases of molecular sieves for fluid separation, the transport properties become predominant to assess the performance. One can leverage the difference of the molecules' diffusion coefficients to selectively filter gas mixtures through a nanoporous membrane.\cite{Miandoab_2021} Here, the main subject becomes the transient state and not the equilibrium. This section is thus dedicated to the kinetics of the adsorption process to better model the time required to reach the equilibrium or to study out-of-equilibrium processes such as molecular sieving by nanoporous membranes.
+The thermodynamic properties, we will be presenting in the next section, only describes the state of equilibrium of the adsorption process. But sometimes the transient state can last long before reaching the equilibrium, which makes the process more time-consuming. Thus, the transport properties complete the thermodynamic description of the adsorption process inside a nanoporous material. For example, a low diffusion rate would mean for storage applications more time and energy needed to fill-up the tanks, or for separation applications a less selective process than expected. In more extreme cases of molecular sieves for fluid separation, the transport properties become predominant to assess the performance. One can leverage the difference of the molecules' diffusion coefficients to selectively filter gas mixtures through a nanoporous membrane.\cite{Miandoab_2021} Here, the main subject becomes the transient state and not the equilibrium. This section is thus dedicated to the kinetics of the adsorption process to better model the time required to reach the equilibrium or to study out-of-equilibrium processes such as molecular sieving by nanoporous membranes.
 
 \subsubsection{Kinetic Properties}
 
@@ -200,7 +200,7 @@ In its early development, computational screening was mainly used to predict the
 
 One can leverage the high surface density of the nanoporous materials, especially the MOFs, to stock in very low-density gas. In the field of energy storage or transportation, natural gas (mainly methane) or hydrogen are considered plausible alternative fuels to replace conventional ones for transport. The US Department of Energy (US DOE) recently financed research programs and set targets for methane and hydrogen storage. Nanoporous materials could reduce energy, infrastructure and security cost due to the required compression and cooling. In this section, we are focusing on high-throughput screening for methane storage in nanoporous materials, before broadening the scope hydrogen and other perspectives.
 
-One of the pioneering works in computational screening was published in 2012 by Wilmer et al.\cite{Wilmer_2012}. They performed a large-scale screening of 137,953 hypothetical MOF structures to estimate the methane storage capacity of each MOF at \SI{35}{\bar} and \SI{298}{\kelvin} based on the US DOE standards. Back then, the US DOE set a target methane capacity value of 180 vol{\footnotesize$^\mathrm{STP}$}vol$^{-1}$ (which has since been achieved by several materials reported in the literature). In their large-scale analysis, Wilmer et al.\ found over 300 hypothetical MOFs that meet the targeted requirements and the best one can store up to 267 vol{\footnotesize$^\mathrm{STP}$}vol$^{-1}$, surpassing the state-of-the-art of the time. From their large dataset, a preliminary structure-property relationship analysis revealed that void fraction values of approximately 0.8 and gravimetric surface areas in a range 2500-3000 m$^2$g$^{-1}$ resulted in the highest methane capacities. Optimal pore size is also shown to be around the size of one or two methane molecule(s). Maximization of gravimetric surface area was a common strategy in the MOF design for storage applications, but this study showed the existence of an optimal range of surface area values. Computational screenings can draw clear relationships between structural descriptors and performance. Later, a more quantitative relationship was drawn by Fernandez et al.\ using ML models as illustrated on Figure \ref{fgr:Fernandez_2013}. Beware not to over-interpret the relation given by the response surface, since the identified maxima do not always have a physical reality, especially where there is no training data in the area pointed by the red arrows. However, it highlights promising unexplored feature space and shows potential research directions.
+One of the pioneering works in computational screening was published in 2012 by Wilmer et al.\cite{Wilmer_2012}. They performed a large-scale screening of 137,953 hypothetical MOF structures to estimate the methane storage capacity of each MOF at \SI{35}{\bar} and \SI{298}{\kelvin} based on the US DOE standards. Back then, the US DOE set a target methane capacity value of 180 vol{\footnotesize$^\mathrm{STP}$}vol$^{-1}$ (which has since been achieved by several materials reported in the literature). In their large-scale analysis, Wilmer et al.\ found over 300 hypothetical MOFs that meet the targeted requirements and the best one can store up to 267 vol{\footnotesize$^\mathrm{STP}$}vol$^{-1}$, surpassing the state-of-the-art of the time. From their large dataset, a preliminary structure-property relationship analysis revealed that void fraction values of approximately 0.8 and gravimetric surface areas in a range $2500$-$3000$ \si{\square\meter\cubic\centi\meter} resulted in the highest methane capacities. Optimal pore size is also shown to be around the size of one or two methane molecule(s). Maximization of gravimetric surface area was a common strategy in the MOF design for storage applications, but this study showed the existence of an optimal range of surface area values. Computational screenings can draw clear relationships between structural descriptors and performance. Later, a more quantitative relationship was drawn by Fernandez et al.\ using ML models as illustrated on Figure \ref{fgr:Fernandez_2013}. Beware not to over-interpret the relation given by the response surface, since the identified maxima do not always have a physical reality, especially where there is no training data in the area pointed by the red arrows. However, it highlights promising unexplored feature space and shows potential research directions.
 
 \begin{figure}[ht]
 \centering
@@ -243,14 +243,15 @@ In its early stage, computational screening has been used on a small series of n
 
 The first large-scale computational screening on Xe/Kr adsorption-based was performed by Sikora et al.\ based on the same approach previously developed for methane storage by their group at the Northwestern University.\cite{Sikora_2012} This study was based on the same {137,000} structures of hypothetical MOFs.\cite{Wilmer_2012} They calculated the Xe/Kr selectivity using Monte Carlo molecular simulations on the whole database by iteratively increasing the number of steps and selecting the best materials similar to the approach on Figure \ref{fgr:screening}. By analyzing the relationships between pore sizes and selectivity, they confirmed a hypothesis from a smaller scale study that the pores should be between the size of 1 to 2 xenon molecules.\cite{Ryan_2010} Tube-like channel was also found to favor better selectivity. Moreover, they found that top performing materials could have a selectivity around 500; but we can only conclude on the order of magnitude of the theoretical limitation of the Xe/Kr selectivity, considering the statistical uncertainty of the simulation.
 
-Seizing the opportunity of a formidable expansion of the nanoporous materials database triggered by the Materials Genome Initiative, Simon et al.\ screened 670,000 experimental and hypothetical nanoporous material structures for Xe/Kr separation.\cite{Simon_2015} It is one of the largest-scale screening performed in this area. Inspired by the work of Fernandez and co-workers,\cite{Fernandez_2013} they used ML algorithms to train a model on a diverse subset of 15,000 structures. This method allowed them to run time-consuming molecular simulations only on this training set, before applying the ML model to predict the selectivity values on the larger set of structures. On top of analyzing the links between pore descriptors and selectivity, they rationalized it using theoretical pore models of spherical and cylindrical geometries to confirm the findings of Snurr and co-workers.\cite{Ryan_2010,Sikora_2012} By comparing the structural descriptors of good-performing and bad-performing structures, they concluded that geometrical descriptors wasn't enough to explain the performance (see Figure \ref{fgr:Simon2015}). The analysis of a few top candidates suggests that different chemical insights could explain their good performance. For SBMOF-1 or KAXQIL,\cite{KAXQIL} an experimental MOF, its higher performance was explained by the tube-like 1D channel with a very favorable binding site formed by carbon aromatic rings. This nanoporous material was later tested using breakthrough experiments and proved to be one of the most promising candidates.\cite{Banerjee_2016} This close collaboration between computation and experimentation is a testimony of the potential of computational screenings to find nanoporous materials for any targeted application.
+Seizing the opportunity of a formidable expansion of the nanoporous materials database triggered by the Materials Genome Initiative, Simon et al.\ screened 670,000 experimental and hypothetical nanoporous material structures for Xe/Kr separation (see Figure~\ref{fgr:Simon}).\cite{Simon_2015} It is one of the largest-scale screening performed in this area. Inspired by the work of Fernandez and co-workers,\cite{Fernandez_2013} they used ML algorithms to train a model on a diverse subset of 15,000 structures. This method allowed them to run time-consuming molecular simulations only on this training set, before applying the ML model to predict the selectivity values on the larger set of structures. On top of analyzing the links between pore descriptors and selectivity, they rationalized it using theoretical pore models of spherical and cylindrical geometries to confirm the findings of Snurr and co-workers.\cite{Ryan_2010,Sikora_2012} By comparing the structural descriptors of good-performing and bad-performing structures, they concluded that geometrical descriptors wasn't enough to explain the performance. The analysis of a few top candidates suggests that different chemical insights could explain their good performance. For SBMOF-1 or KAXQIL,\cite{KAXQIL} an experimental MOF, its higher performance was explained by the tube-like 1D channel with a very favorable binding site formed by carbon aromatic rings. This nanoporous material was later tested using breakthrough experiments and proved to be one of the most promising candidates.\cite{Banerjee_2016} This close collaboration between computation and experimentation is a testimony of the potential of computational screenings to find nanoporous materials for any targeted application.
 
-\begin{figure}[ht]
-\centering
-  \includegraphics[width=0.7\linewidth]{figures/1-screening/Simon_2015_descriptors.jpeg}
-  \caption{Statistical analysis of the adsorption separation of xenon/krypton mixtures by nanoporous materials. The graphs represent the distributions of structural descriptors explored by highly selective (green) and poorly selective (red) materials separately. Reprinted with permission from Ref.~\citenum{Simon_2015}. Copyright 2015 American Chemical Society.}
-  \label{fgr:Simon2015}
-\end{figure}
+\begin{figure*}[t]
+  \centering
+  \includegraphics[width=0.98\textwidth]{figures/1-screening/Simon.jpg}
+  \caption{Schematic representation of large-scale screening of nanoporous materials for Xe/Kr adsorption-based separation by Simon et al.,\cite{Simon_2015} based on a combination of Grand Canonical Monte Carlo simulations and machine learning algorithm (Random Forest Regressor). The main goal of this screening is to find high-performing materials in a large dataset of both experimental and hypothetical materials. 
+  Adapted with permission from Ref.~\citenum{Simon_2015}. Copyright 2015 American Chemical Society.
+  }\label{fgr:Simon}
+\end{figure*}
 
 The experimental work on Xe/Kr separation on SBMOF-1 revealed discrepancies between the selectivity values obtained experimentally and computationally.\cite{Banerjee_2016} {The assumption of rigid crystal structures in the molecular simulations could partially explain the difference observed.} Witman et al.\ proposed that the flexibility of the materials, that weren't considered in the screening of Simon et al., could explain the lower selectivity observed experimentally.\cite{Witman_2017} In this study, they screened the Henry regime separation of about 4,000 MOF structures of the CoRE MOF 2014 database\cite{Chung_2014}, and found that intrinsic flexibility, i.e.\ the thermal vibration of the material, can make the pore size derive from the ideal value for the separation and hence lower the selectivity. This study further confirms the importance of the pore size by highlighting the effect of its evolution over time.
 
@@ -309,13 +310,14 @@ To connect back our study to computational screenings, we are now going to prese
 
 It is possibly the largest-scale study performed in this area, both by the sheer number of frameworks involved and by the diversity of their nature. Because such a set is too big for brute-force screening with GCMC simulations, they proposed a multiscale modeling strategy combining machine learning algorithms (trained on a diverse subset of 15,000 materials) with molecular simulations (used both to generate the ML training data, and to refine the separation properties for the top performers obtained by the ML predictor). Without going into details (see Fig.~\ref{fgr:Simon} for more details), the ML model they trained was mainly based on geometric structural descriptors, with the addition of a single energy-based descriptor: the Voronoi energy\ (i.e.\ the average energy\ of a xenon atom at the accessible nodes in the Voronoi partition of space). In addition to identifying and describing some top performing materials, the authors also analyzed the correlations between high Xe/Kr selectivity and the geometric properties of the frameworks, in order to ``rationalize the strong link between pore size and selectivity''. In particular, by developing theoretical pore models of spherical and cylindrical geometries, they could highlight the general geometrical trends observed, but also the fact that there is a wide diversity of performance beyond the geometrical features of the frameworks, which suggests the key role of the chemical nature of the cavities.
 
-\begin{figure*}[t]
-    \centering
-    \includegraphics[width=0.98\textwidth]{figures/1-screening/Simon.jpg}
-    \caption{Schematic representation of large-scale screening of nanoporous materials for Xe/Kr adsorption-based separation by Simon et al.,\cite{Simon_2015} based on a combination of Grand Canonical Monte Carlo simulations and machine learning algorithm (Random Forest Regressor). The main goal of this screening is to find high-performing materials in a large dataset of both experimental and hypothetical materials. 
-    Adapted with permission from Ref.~\citenum{Simon_2015}. Copyright 2015 American Chemical Society.
-    }\label{fgr:Simon}
-\end{figure*}
+By looking at the distribution of the most selective materials ($s\geq 14$) compared to the less selective ones ($s<14$) in the Figure~\ref{fgr:Simon2015}, Simon et al.\ established a first profile of the selective materials. These materials have pore sizes of a specific diameter very close to the kinetic diameter of xenon around \SI{4.4}{\angstrom} depending on how it is defined. They have rather low surface areas and porosities (void fractions) unlike what we would normally expect since the adsorbable surface is a key reason for using nanoporous materials in adsorption applications. This behavior can be rationalized by the fact that small pores of the order of a few \si{\angstrom} drives mechanically to smaller pore volumes and surface areas (the framework atoms have more space). The crystal density is therefore also a bit higher for these reasons. Moreover, the pore's shape is also a crucial factor since a shape closer to a sphere would interact with the xenon with more atoms, hence increasing its affinity and the selectivity. Finally, last but not least, the Voronoi energy described the physical nature of the binding between the xenon and the pore atoms, the more negative it is and the more selective the material will be. To wrap-up, the ideal materials have a pseudo-spherical shape (a complete sphere would stop the diffusion of the adsorbates) with a size close to the diameter of a xenon which is rather dense and not very porous.
+
+\begin{figure}[ht]
+\centering
+  \includegraphics[width=0.7\linewidth]{figures/1-screening/Simon_2015_descriptors.jpeg}
+  \caption{Statistical analysis of the adsorption separation of xenon/krypton mixtures by nanoporous materials. The graphs represent the distributions of structural descriptors explored by highly selective (green) and poorly selective (red) materials separately. Reprinted with permission from Ref.~\citenum{Simon_2015}. Copyright 2015 American Chemical Society.}
+  \label{fgr:Simon2015}
+\end{figure}
 
 The chemical nature of the cavities was best described using the Voronoi energy descriptor they developed. This descriptor gives an idea of the xenon adsorption isosteric heat of the material. Given these results, more studies should focus on describing the adsorption thermodynamic quantities such as the adsorption enthalpy but also the Henry adsorption constants. This study finally leads to the synthesis and testing of one of the top performing materials in the field. However, we cannot stop but wondering why there is a discrepancy between the theoretical selectivity of around $70$ of SBMOF-1 and its actual experimental selectivity of $16$. In the final chapter of this thesis, we will try to give an explanation for this. In the future, such close collaboration between experimental and computational teams are crucial even if they are still too rare. A recent paper suggests that these collaborations are rare across all nanoporous fields and a lot of improvements are needed to foster cooperation between the labs.\cite{Li_2022}
 
