--- a/psl-cover.sty
+++ b/psl-cover.sty
@@ -35,10 +35,10 @@
   \gdef\@doctoralschoolnumber{#2}
 }
 %% default values
-\newcommand*{\@institute}{MINES ParisTech}
+\newcommand*{\@institute}{Chimie ParisTech}
 \newcommand*{\@specialty}{Sp\'{e}cialit\'{e} de l'ED}
-\newcommand*{\@doctoralschoolname}{Nom de l'ED}
-\newcommand*{\@doctoralschoolnumber}{XXX}
+\newcommand*{\@doctoralschoolname}{Chimie Physique et\\ Chimie Analytique de\\ Paris Centre}
+\newcommand*{\@doctoralschoolnumber}{388}
 
 \newcommand{\jurymember}[4]{
   \ifnum#1=1
@@ -144,11 +144,13 @@
 }
 \fi
 
-% \if@cotutelle
+\if@cotutelle
 \newcommand{\entitle}[1]{\gdef\@entitle{#1}}
-% \newcommand{\otherinstitute}[1]{\gdef\@otherinstitute{#1}}
-% \newcommand{\logootherinstitute}[1]{\gdef\@logootherinstitute{#1}}
-% \fi
+\newcommand{\otherinstitute}[1]{\gdef\@otherinstitute{#1}}
+\newcommand{\logootherinstitute}[1]{\gdef\@logootherinstitute{#1}}
+\else
+\newcommand{\entitle}[1]{\gdef\@entitle{#1}}
+\fi
 
 %% Whole PSL cover, front + back
 \newcommand*{\pslcover}{
@@ -280,9 +282,14 @@
 
       %% PSL institute logo
       \node[xshift=-56mm, yshift=-124mm] at (o) {
-        \includegraphics[width=.6\textwidth]{\@pslassetspath/logo-institute}
+        \includegraphics[width=0.4\textwidth]{\@pslassetspath/logo-institute}
       };
-
+      \node[xshift=0mm, yshift=-124mm] at (o) {
+        \includegraphics[height=2.3cm]{\@pslassetspath/logo-cea}
+      };
+      \node[xshift=58mm, yshift=-124mm] at (o) {
+        \includegraphics[width=0.4\textwidth]{\@pslassetspath/logo-orano}
+      };
       %% other institute logo (cotutelle)
       \if@cotutelle
       \node[xshift=65mm, yshift=125mm] at (o) {
